RESOLVED FIXED176724
AX: [ATK] aria-autocomplete not exposed on comboboxes
https://bugs.webkit.org/show_bug.cgi?id=176724
Summary AX: [ATK] aria-autocomplete not exposed on comboboxes
Joanmarie Diggs
Reported 2017-09-11 12:52:23 PDT
aria-autocomplete is not exposed on comboboxes for ATK, even though the combobox role supports this property; text controls work as expected.
Attachments
Patch (5.84 KB, patch)
2017-09-11 12:59 PDT, Joanmarie Diggs
no flags
Radar WebKit Bug Importer
Comment 1 2017-09-11 12:52:37 PDT
Joanmarie Diggs
Comment 2 2017-09-11 12:59:14 PDT
WebKit Commit Bot
Comment 3 2017-09-11 14:52:30 PDT
Comment on attachment 320461 [details] Patch Clearing flags on attachment: 320461 Committed r221879: <http://trac.webkit.org/changeset/221879>
WebKit Commit Bot
Comment 4 2017-09-11 14:52:31 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.