AX: [ATK] aria-autocomplete not exposed on comboboxes https://bugs.webkit.org/show_bug.cgi?id=176724

Reviewed by Chris Fleizach.

Source/WebCore:

Add a check to AccessibilityObject::supportsARIAAutoComplete() for
combobox because isARIATextControl() returns false for that role.

Add new combobox test cases to existing aria-autocomplete.html test.

* accessibility/AccessibilityObject.cpp:
(WebCore::AccessibilityObject::supportsARIAAutoComplete const):

LayoutTests:

* accessibility/gtk/aria-autocomplete-expected.txt: Updated for new test cases
* accessibility/gtk/aria-autocomplete.html: New test cases for combobox added


Canonical link: https://commits.webkit.org/193224@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@221879 268f45cc-cd09-0410-ab3c-d52691b4dbfc